[MAIN-T-6]: база данных + сущности

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/calendar
+spring.datasource.username=calendar_owner
+spring.datasource.password=calendar_owner
 
+spring.flyway.default-schema=public
+spring.flyway.baselineOnMigrate = true
