--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.password=calendar_owner
 
 spring.flyway.default-schema=public
 spring.flyway.baselineOnMigrate = true
+
+jwt.secret.access=...
+jwt.secret.refresh=...
+jwt.access-expiration=1000
+jwt.refresh-expiration=1000
