--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/calendar
+spring.datasource.url=jdbc:postgresql://dbpostgresql:5432/calendar
 spring.datasource.username=calendar_owner
 spring.datasource.password=calendar_owner
 
