--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/calendar
-spring.datasource.username=calendar_owner
-spring.datasource.password=calendar_owner
+spring.datasource.url=...
+spring.datasource.username=...
+spring.datasource.password=...
 
 spring.flyway.default-schema=public
 spring.flyway.baselineOnMigrate = true
 
 jwt.secret.access=...
 jwt.secret.refresh=...
-jwt.access-expiration=1000
-jwt.refresh-expiration=1000
+jwt.access-expiration-seconds=10
+jwt.refresh-expiration-days=10
