--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: '3.1'
 services:
   app:
     container_name: app
-    image: app
-    build: ./
+    image: sidrdetyam/calendar:master
     ports:
       - "8080:8080"
     depends_on:
