MAIN-T-9 убрал сущность уведомления по причине того, что информация о них хранится в сущностях событие и задача(по сути тг бот должен ходить к нам каждый некоторый период времени и получать события на текущую дату и в зависимости от этого показывать уведомления

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,11 @@
-name: Build
+name: Deploy
 on:
   workflow_dispatch:
   push:
     branches:
       - master
 jobs:
-  test:
+  publish-on-docker-hub:
     runs-on: ubuntu-latest
     steps:
       - name: Get repository code
